# apartment-hunter

./: README.md  cleaning.ipynb  dict.py  eda.ipynb  houses_Madrid_MASTER.csv  makefile  pipeline.txt  pyproject.toml  todo.txt
backend/: api.py  model.json  schema.py
data/: conclusion.md  description_kc_house.txt  description_madrid.txt  etablissements.csv  houses_Madrid_analysis_report.csv  partenariat.csv  pertinence_jeunes.csv  popularite.csv  technique.csv  test.csv
frontend/: index.py
frontend/pages/: data_viz.py  metrics.py  predict.py
notebooks/: analyze_madrid.ipynb  build_model.ipynb  test.ipynb  utils.py
scripts/: analyze_distribution.py  analyze_missing_values.py
train/: minimal_trainer.py
