[project]
name = "apartment-hunter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.11.0",
    "boruta>=0.4.3",
    "fastapi>=0.123.4",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "ipykernel>=7.1.0",
    "joblib>=1.5.2",
    "makefile>=1.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]
